objects/GDS_Layer__c.object
<CustomObject>
    <fields>
        <fullName>GDS__c</fullName>
        <label>GDS</label>
        <referenceTo>GDS__c</referenceTo>
        <relationshipLabel>GDS Layers</relationshipLabel>
        <relationshipName>GDS_Layers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Layer_Data_Type__c</fullName>
        <label>Layer Data Type</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Layer_Number__c</fullName>
        <label>Layer Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>GDS Layer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>GDS Layer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GDS Layers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>